project-20-zero-trust-kubernetes/manifests/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: zero-trust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
        tier: database
    spec:
      containers:
      - name: database
        image: hashicorp/http-echo
        args:
        - "-text=database service"
        - "-listen=:5678"
        ports:
        - containerPort: 5678
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: zero-trust
spec:
  selector:
    app: database
  ports:
  - port: 5678
    targetPort: 5678
